Added integration with CoinCap API 2.0 and a method for getting information about a cryptocurrency by its ID

--- a/CryptocurrenciesCollector.ViewModels/CryptocurrenciesCollector.ViewModels.csproj
+++ b/CryptocurrenciesCollector.ViewModels/CryptocurrenciesCollector.ViewModels.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CryptocurrenciesCollector.Services\CryptocurrenciesCollector.Services.csproj" />
+  </ItemGroup>
+
 </Project>
