used the Dependency Injection pattern with the ICryptocurrencyApiService interface, creating additional data models for getting assets by id, refactoring the get method by asset id.

--- a/CryptocurrenciesCollector.Services/CryptocurrenciesCollector.Services.csproj
+++ b/CryptocurrenciesCollector.Services/CryptocurrenciesCollector.Services.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CryptocurrenciesCollector.Models\CryptocurrenciesCollector.Models.csproj" />
+  </ItemGroup>
+
 </Project>
