--- a/CryptocurrenciesCollector/appsettings.json
+++ b/CryptocurrenciesCollector/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ApiSettings": {
-        "CoinCapApiKey": "447b340b-d660-4e60-9e85-255739b6bcb0"
+        "CoinCapApiKey": "your_api_key"
     }
 }
