added a helper project to add functionality to the textbox - to handle the OnPreviewTextInput property; added check of number of assets received from API; created a prototype of the settings page

--- a/CryptocurrenciesCollector/CryptocurrenciesCollector.csproj
+++ b/CryptocurrenciesCollector/CryptocurrenciesCollector.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CryptocurrenciesCollector.Helpers\CryptocurrenciesCollector.Helpers.csproj" />
     <ProjectReference Include="..\CryptocurrenciesCollector.Services\CryptocurrenciesCollector.Services.csproj" />
     <ProjectReference Include="..\CryptocurrenciesCollector.ViewModels\CryptocurrenciesCollector.ViewModels.csproj" />
   </ItemGroup>
