refactored code: extracted candles logic, deleted unnecessary button style

--- a/CryptocurrenciesCollector.ViewModels/CryptocurrenciesCollector.ViewModels.csproj
+++ b/CryptocurrenciesCollector.ViewModels/CryptocurrenciesCollector.ViewModels.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CryptocurrenciesCollector.Services\CryptocurrenciesCollector.Services.csproj" />
+    <ProjectReference Include="..\CryptocurrenciesCollector.Models\CryptocurrenciesCollector.Models.csproj" />
   </ItemGroup>
 
 </Project>
