added ability to change a language on the main page

--- a/CryptocurrenciesCollector.ViewModels/CryptocurrenciesCollector.ViewModels.csproj
+++ b/CryptocurrenciesCollector.ViewModels/CryptocurrenciesCollector.ViewModels.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
     <PackageReference Include="OxyPlot.Wpf" Version="2.2.0" />
+    <PackageReference Include="WPFLocalizeExtension" Version="3.10.0" />
   </ItemGroup>
 
   <ItemGroup>
