added settings loading from settings file on application start

--- a/CryptocurrenciesCollector/CryptocurrenciesCollector.csproj
+++ b/CryptocurrenciesCollector/CryptocurrenciesCollector.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CryptocurrenciesCollector.Helpers\CryptocurrenciesCollector.Helpers.csproj" />
+    <ProjectReference Include="..\CryptocurrenciesCollector.Resources\CryptocurrenciesCollector.Resources.csproj" />
     <ProjectReference Include="..\CryptocurrenciesCollector.Services\CryptocurrenciesCollector.Services.csproj" />
     <ProjectReference Include="..\CryptocurrenciesCollector.ViewModels\CryptocurrenciesCollector.ViewModels.csproj" />
   </ItemGroup>
