--- a/CryptocurrenciesCollector.ViewModels/CryptocurrenciesCollector.ViewModels.csproj
+++ b/CryptocurrenciesCollector.ViewModels/CryptocurrenciesCollector.ViewModels.csproj
@@ -16,6 +16,22 @@
   <ItemGroup>
     <ProjectReference Include="..\CryptocurrenciesCollector.Helpers\CryptocurrenciesCollector.Helpers.csproj" />
     <ProjectReference Include="..\CryptocurrenciesCollector.Models\CryptocurrenciesCollector.Models.csproj" />
+    <ProjectReference Include="..\CryptocurrenciesCollector.Resources\CryptocurrenciesCollector.Resources.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
